fix: Input props + scrollbar style

--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,23 @@
 ::selection {
   @apply bg-yellow-300
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  @apply bg-transparent border-l;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: black;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-fuchsia-300;
+}
